@@ -1,8 +1,8 @@
 # -*- shell-script -*-
 # @configure_input@
 #
-# Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-# 2005, 2006, 2007 Free Software Foundation, Inc.
+# Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 
+# 2005, 2006, 2007, 2008 Free Software Foundation, Inc.
 #
 # (This file was originally part of GNU Automake.)
 #
@@ -72,7 +72,7 @@ test -z "$TEXI2DVI" && TEXI2DVI=$srcdir_abs/texi2dvi
 # be sure we use texi2dvi and texindex from our own directory, not
 # whatever happens to be in the path.
 echo "defs: prepending $srcdir_abs to PATH for testing."
-PATH=$srcdir_abs:$PATH
+PATH="@abs_builddir@:@abs_srcdir@:$PATH"
 
 # Some shells forget to export modified environment variables.
 # (See note about `export' in the Autoconf manual.)
